# Axion-Code

./: .gitignore  LICENSE  README.md  build.py  my-chat.md  osawaye_cyrus_research.md  pyproject.toml  test.txt  upwork-ai-integration-profile-guide.md
.axion/memory/: session-2026-04-07.md
.github/workflows/: ci.yml
axion/: __init__.py
axion-vscode/: README.md  package.json  tsconfig.json
axion-vscode/src/: axionProvider.ts  chatPanel.ts  extension.ts  statusBar.ts
axion/api/: anthropic.py  client.py  error.py  ollama.py  openai_compat.py  openai_responses.py  sse.py  types.py
axion/cli/: init_cmd.py  input.py  main.py  render.py  tui.py
axion/commands/: parsing.py  registry.py
axion/commands/handlers/: agents.py  builtin_commands.py  mcp.py  models.py  plugins.py  skills.py
axion/compat_harness/: extractor.py
axion/plugins/: hooks.py  manager.py  manifest.py
axion/runtime/: bash.py  claude_subscription.py  compact.py  config.py  conversation.py  file_ops.py  git.py  image.py  lanes.py  license.py  memory.py  oauth.py  openai_subscription.py  permissions.py  plan_mode.py  policy_engine.py  prompt.py  recovery.py  remote.py  sandbox.py  scheduler.py  session.py  sharing.py  skills.py  tasks.py  usage.py  workers.py
axion/runtime/mcp/: client.py  lifecycle.py  stdio.py
axion/telemetry/: events.py  profile.py  sink.py  tracer.py
axion/tools/: lane_completion.py  registry.py  tool_search.py
claw/: __init__.py
claw/api/: anthropic.py  client.py  openai_compat.py  prompt_cache.py  sse.py  types.py
claw/cli/: init_cmd.py  input.py  main.py  render.py
claw/commands/: parsing.py  registry.py
claw/commands/handlers/: mcp.py  plugins.py
claw/compat_harness/: extractor.py
claw/plugins/: hooks.py  manager.py  manifest.py
claw/runtime/: bash.py  bootstrap.py  compact.py  config.py  conversation.py  file_ops.py  git.py  hooks.py  lanes.py  lsp.py  memory.py  oauth.py  permissions.py  policy_engine.py  prompt.py  recovery.py  remote.py  sandbox.py  session.py  skills.py  usage.py
claw/runtime/mcp/: lifecycle.py  stdio.py  tool_bridge.py
claw/telemetry/: events.py  profile.py  sink.py  tracer.py
claw/tools/: registry.py
scripts/: generate_key.py
tests/: conftest.py
tests/mock_anthropic/: scenarios.py  server.py
tests/parity/: test_mock_parity.py
tests/unit/: test_api_types.py  test_bash.py  test_commands.py  test_compact.py  test_config.py  test_conversation.py  test_file_ops.py  test_git.py  test_hooks.py  test_mcp.py  test_memory.py  test_oauth.py  test_permissions.py  test_policy_engine.py  test_prompt.py  test_render.py  test_scheduler.py  test_session.py  test_skills.py  test_sse.py  test_tasks.py  test_tool_search.py  test_tools.py  test_usage.py  test_workers.py
