[project]
name = "claw-code"
version = "0.1.0"
description = "Python CLI agent harness - a port of Claw Code"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.5",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
    "coverage>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claw = "claw.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claw"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
