[project]
name = "axion-code"
version = "0.1.0"
description = "Axion Code - Python AI coding assistant CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Cyrus", email = "osawayecyrus@gmail.com"},
]
keywords = ["ai", "cli", "coding-assistant", "claude", "openai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.5",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
    "coverage>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/cypher125/Axion-Code"
Repository = "https://github.com/cypher125/Axion-Code"
Issues = "https://github.com/cypher125/Axion-Code/issues"

[project.scripts]
axion = "axion.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["axion"]

[tool.hatch.build.targets.sdist]
include = ["axion/", "tests/", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["axion"]

[tool.coverage.report]
show_missing = true
skip_empty = true
